# mikrotik-addresslist

./: .gitignore  README.md  example_blocklist.txt  pyproject.toml
src/mikrotik_addresslist/: __init__.py  __main__.py  cli.py  generate_script.py  settings.py
